# oauth-proxy-example

./: .gitignore  Dockerfile  README.md  app1.py  app2.py  docker-compose.yml  pyproject.toml  supervisord.conf
custom_templates/: error.html  sign_in.html
h2/: keycloakdb.lock.db  keycloakdb.mv.db  keycloakdb.trace.db
nginx/: Dockerfile  logout.html  nginx.conf  nginx_conf_streamlit_with_auth.conf
